--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,19 +3,44 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # mainブランチに変更があった場合に実行される
+      - main  # デプロイ対象のブランチ（通常は main）
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest  # 実行環境
+
     steps:
-      - name: Checkout repository
+      # コードのチェックアウト
+      - name: Checkout code
         uses: actions/checkout@v2
 
+      # プロジェクトをビルド（静的サイトの場合）
+      - name: Build project
+        run: |
+          npm install   # 必要なパッケージをインストール
+          npm run build  # ビルドコマンド（必要に応じて変更）
+
+      # GitHub Pages用のアーティファクトをアップロード
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages  # アーティファクト名
+          path: ./build  # ビルドした成果物が格納されているディレクトリ（例: ./build）
+
+  deploy:
+    needs: build  # buildジョブが完了するまで待つ
+    runs-on: ubuntu-latest
+
+    steps:
+      # アーティファクトをダウンロード
+      - name: Download GitHub Pages artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: github-pages  # アップロードしたアーティファクト名と一致
+
+      # GitHub Pagesにデプロイ
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-permissions:
-  contents: write      # リポジトリのコンテンツに書き込み権限を与える
-  id-token: write      # IDトークンの書き込み権限を与える
+          token: ${{ secrets.GITHUB_TOKEN }}  # GitHub Tokenを指定
+          artifact_name: github-pages  # 使用するアーティファクト名
