--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "A simple static site",
   "main": "index.js",
   "scripts": {
-    "build": "echo 'No build step required'",  // ビルドが必要ない場合、ダミーで追加
-    "deploy": "gh-pages -d .",                  // 現在のディレクトリ（`index.html` がある場所）をデプロイ
+    "build": "echo 'No build step required'",  
+    "deploy": "gh-pages -d .",                
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gh-pages": "^3.2.3"  // GitHub Pages へのデプロイ用パッケージ
+    "gh-pages": "^3.2.3"  
   }
 }
